fix: address input options z-index.

--- a/src/app/core/ui/address-input/address-input.component.scss
+++ b/src/app/core/ui/address-input/address-input.component.scss
@@ -42,6 +42,7 @@
 	border: solid 1px var(--border-color);
 	overflow-y: auto;
 	border-radius: 6px;
+	z-index: 1000;
 
 	.option {
 		width: 100%;
